--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Fitness Tracker",
   "short_name": "Fitness",
   "description": "Mein persönlicher Gewichts- und Fortschrittstracker",
-  "start_url": "/",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
